Week7/configs/etc/ufw/user.rules
*filter
:ufw-user-input - [0:0]
:ufw-user-output - [0:0]
:ufw-user-forward - [0:0]
:ufw-before-logging-input - [0:0]
:ufw-before-logging-output - [0:0]
:ufw-before-logging-forward - [0:0]
:ufw-user-logging-input - [0:0]
:ufw-user-logging-output - [0:0]
:ufw-user-logging-forward - [0:0]
:ufw-after-logging-input - [0:0]
:ufw-after-logging-output - [0:0]
:ufw-after-logging-forward - [0:0]
:ufw-logging-deny - [0:0]
:ufw-logging-allow - [0:0]
:ufw-user-limit - [0:0]
:ufw-user-limit-accept - [0:0]
### RULES ###

### tuple ### allow tcp 40000:40010 192.168.1.150 any 192.168.1.0/24 in_br-lab
-A ufw-user-input -i br-lab -p tcp -m multiport --dports 40000:40010 -d 192.168.1.150 -s 192.168.1.0/24 -j ACCEPT

### tuple ### allow tcp 21 192.168.1.150 any 192.168.1.0/24 in_br-lab
-A ufw-user-input -i br-lab -p tcp -d 192.168.1.150 --dport 21 -s 192.168.1.0/24 -j ACCEPT

### tuple ### allow udp 67 0.0.0.0/0 any 0.0.0.0/0 in_br-lab
-A ufw-user-input -i br-lab -p udp --dport 67 -j ACCEPT

### tuple ### allow tcp 53 192.168.1.150 any 192.168.1.0/24 in_br-lab
-A ufw-user-input -i br-lab -p tcp -d 192.168.1.150 --dport 53 -s 192.168.1.0/24 -j ACCEPT

### tuple ### allow udp 53 192.168.1.150 any 192.168.1.0/24 in_br-lab
-A ufw-user-input -i br-lab -p udp -d 192.168.1.150 --dport 53 -s 192.168.1.0/24 -j ACCEPT

### tuple ### deny tcp 21 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p tcp --dport 21 -j DROP

### tuple ### deny tcp 40000:40010 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p tcp -m multiport --dports 40000:40010 -j DROP

### tuple ### allow tcp 22 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p tcp --dport 22 -j ACCEPT

### tuple ### allow tcp 80 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p tcp --dport 80 -j ACCEPT

### END RULES ###

### LOGGING ###
-A ufw-after-logging-input -j LOG --log-prefix "[UFW BLOCK] " -m limit --limit 3/min --limit-burst 10
-A ufw-after-logging-forward -j LOG --log-prefix "[UFW BLOCK] " -m limit --limit 3/min --limit-burst 10
-I ufw-logging-deny -m conntrack --ctstate INVALID -j RETURN -m limit --limit 3/min --limit-burst 10
-A ufw-logging-deny -j LOG --log-prefix "[UFW BLOCK] " -m limit --limit 3/min --limit-burst 10
-A ufw-logging-allow -j LOG --log-prefix "[UFW ALLOW] " -m limit --limit 3/min --limit-burst 10
### END LOGGING ###

### RATE LIMITING ###
-A ufw-user-limit -m limit --limit 3/minute -j LOG --log-prefix "[UFW LIMIT BLOCK] "
-A ufw-user-limit -j REJECT
-A ufw-user-limit-accept -j ACCEPT
### END RATE LIMITING ###
COMMIT
